force-app/main/default/objects/MW_Settings__c/MW_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MW_Settings</label>
</CustomObject>