force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_API_Product_Flow__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_API_Product_Flow__c</fullName>
    <description>If utm_source equals this value, then the app is considered API product flow</description>
    <label>Allocation Engine API Product Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>