force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_At_Agent_Verified__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_At_Agent_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, CLS should send the initial allocation call at agent_verified instead of agent_document_verification_pending</description>
    <label>Allocation Engine At Agent Verified</label>
    <type>Checkbox</type>
</CustomField>