force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Batch_Size__c</fullName>
    <label>Allocation Engine Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>