force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_Cancel_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Cancel_Statuses__c</fullName>
    <description>CSV of Application statuses which will trigger a &apos;cancel&apos; notification</description>
    <label>Allocation Engine Cancel Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>