force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_Default_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Default_Program_Id__c</fullName>
    <description>The Program Id sent in the event of a null program id on the application</description>
    <label>Allocation Engine Default Program Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>