force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_Deployment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Deployment_Mode__c</fullName>
    <description>Either &apos;LEGACY_MODE&apos;, &apos;DARK_MODE&apos;, or &apos;FULL_MODE&apos;.  Legacy uses rules api code, dark mode is both, and full is Allocation Engine only.  Null is treated as &apos;LEGACY_MODE&apos;</description>
    <label>Allocation Engine Deployment Mode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>