force-app/main/default/objects/MW_Settings__c/fields/Allocation_Engine_Service_URL_FMT__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Engine_Service_URL_FMT__c</fullName>
    <description>Allocation Engine Service URL format string</description>
    <label>Allocation Engine Service URL FMT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>