force-app/main/default/objects/MW_Settings__c/fields/API_User_Filter__c.field-meta.xml
<CustomField>
    <fullName>API_User_Filter__c</fullName>
    <description>Avoid these API users making web service callout when they are the one making the update to application.</description>
    <inlineHelpText>Separate each username by comma.</inlineHelpText>
    <label>API User Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>