force-app/main/default/objects/MW_Settings__c/fields/BOXRootFolder__c.field-meta.xml
<CustomField>
    <fullName>BOXRootFolder__c</fullName>
    <label>BOXRootFolder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>