force-app/main/default/objects/MW_Settings__c/fields/CertificateNameForLEADS__c.field-meta.xml
<CustomField>
    <fullName>CertificateNameForLEADS__c</fullName>
    <description>leads connection certificate name</description>
    <label>CertificateNameForLEADS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>