force-app/main/default/objects/MW_Settings__c/fields/DataDogApiKey__c.field-meta.xml
<CustomField>
    <fullName>DataDogApiKey__c</fullName>
    <label>The DataDog API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>