force-app/main/default/objects/MW_Settings__c/fields/DataDogApiURL__c.field-meta.xml
<CustomField>
    <fullName>DataDogApiURL__c</fullName>
    <label>The DataDog API URL</label>
    <type>Url</type>
</CustomField>