force-app/main/default/objects/MW_Settings__c/fields/DataDogTags__c.field-meta.xml
<CustomField>
    <fullName>DataDogTags__c</fullName>
    <label>The DataDog Tags for logging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>