force-app/main/default/objects/MW_Settings__c/fields/Delete_Bank_Account_EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>Delete_Bank_Account_EndpointURL__c</fullName>
    <label>Delete Bank Account EndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>