force-app/main/default/objects/MW_Settings__c/fields/docCategoriesNamestoskip__c.field-meta.xml
<CustomField>
    <fullName>docCategoriesNamestoskip__c</fullName>
    <label>docCategoriesNamestoskip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>