force-app/main/default/objects/MW_Settings__c/fields/ExcludeLoansForSkipAPay__c.field-meta.xml
<CustomField>
    <fullName>ExcludeLoansForSkipAPay__c</fullName>
    <label>ExcludeLoansForSkipAPay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>