force-app/main/default/objects/MW_Settings__c/fields/FE_User_Filter__c.field-meta.xml
<CustomField>
    <fullName>FE_User_Filter__c</fullName>
    <label>FE User Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>