force-app/main/default/objects/MW_Settings__c/fields/LEADS_FE_EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>LEADS_FE_EndpointURL__c</fullName>
    <description>Endpoint URL for FE</description>
    <label>LEADS(FE)EndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>