force-app/main/default/objects/MW_Settings__c/fields/loan_ops_slack_channel_webhook__c.field-meta.xml
<CustomField>
    <fullName>loan_ops_slack_channel_webhook__c</fullName>
    <label>loan ops slack channel webhook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>