force-app/main/default/objects/MW_Settings__c/fields/lsp_team_slack_channel_webhook__c.field-meta.xml
<CustomField>
    <fullName>lsp_team_slack_channel_webhook__c</fullName>
    <label>lsp-team-slack-channel-webhook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>