force-app/main/default/objects/MW_Settings__c/fields/MemberMatchingDeactivationTool__c.field-meta.xml
<CustomField>
    <fullName>MemberMatchingDeactivationTool__c</fullName>
    <label>MemberMatchingDeactivationTool</label>
    <length>200</length>
    <type>Text</type>
</CustomField>