force-app/main/default/objects/MW_Settings__c/fields/MissingDocumentsAppStatuses__c.field-meta.xml
<CustomField>
    <fullName>MissingDocumentsAppStatuses__c</fullName>
    <label>MissingDocumentsAppStatuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>