force-app/main/default/objects/MW_Settings__c/fields/Neoverify_APIkey__c.field-meta.xml
<CustomField>
    <fullName>Neoverify_APIkey__c</fullName>
    <description>API key to connect with neoverify</description>
    <label>Neoverify_APIkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>