force-app/main/default/objects/MW_Settings__c/fields/OLN_Stacker_Decline_reasons__c.field-meta.xml
<CustomField>
    <fullName>OLN_Stacker_Decline_reasons__c</fullName>
    <description>OLN stacker decline reasons - these are static for now -- Ticket CLS-1064</description>
    <label>OLN_Stacker_Decline_reasons</label>
    <type>TextArea</type>
</CustomField>