force-app/main/default/objects/MW_Settings__c/fields/OLN_Stacker_Threshold__c.field-meta.xml
<CustomField>
    <fullName>OLN_Stacker_Threshold__c</fullName>
    <label>OLN Stacker Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>