force-app/main/default/objects/MW_Settings__c/fields/OTPOMBPSiteURL__c.field-meta.xml
<CustomField>
    <fullName>OTPOMBPSiteURL__c</fullName>
    <label>OTPOMBPSiteURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>