force-app/main/default/objects/MW_Settings__c/fields/SalesforceLimitsUrl__c.field-meta.xml
<CustomField>
    <fullName>SalesforceLimitsUrl__c</fullName>
    <label>SalesforceLimitsUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>