force-app/main/default/objects/MW_Settings__c/fields/Sift_score__c.field-meta.xml
<CustomField>
    <fullName>Sift_score__c</fullName>
    <label>Sift score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>