force-app/main/default/objects/MW_Settings__c/fields/Slack_Alert_Channels__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alert_Channels__c</fullName>
    <description>Post error message to Slack Channels</description>
    <label>Slack Alert Channels</label>
    <type>Url</type>
</CustomField>