force-app/main/default/objects/MW_Settings__c/fields/Slack_Info_Channels__c.field-meta.xml
<CustomField>
    <fullName>Slack_Info_Channels__c</fullName>
    <description>Info Only</description>
    <label>Slack Info Channels</label>
    <type>Url</type>
</CustomField>