force-app/main/default/objects/MW_Settings__c/fields/Slack_Info_Icon__c.field-meta.xml
<CustomField>
    <fullName>Slack_Info_Icon__c</fullName>
    <label>Slack Info Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>