force-app/main/default/objects/MW_Settings__c/fields/Slack_mentions_for_loan_ops__c.field-meta.xml
<CustomField>
    <fullName>Slack_mentions_for_loan_ops__c</fullName>
    <label>Slack mentions for loan ops</label>
    <length>255</length>
    <type>Text</type>
</CustomField>