force-app/main/default/objects/MW_Settings__c/fields/Slack_mentions_for_Nacha_alert__c.field-meta.xml
<CustomField>
    <fullName>Slack_mentions_for_Nacha_alert__c</fullName>
    <label>Slack mentions for Nacha alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>