force-app/main/default/objects/MW_Settings__c/fields/Slack_Middleware_System_Alert_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Middleware_System_Alert_Channel__c</fullName>
    <label>Slack Middleware System Alert Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>