force-app/main/default/objects/MW_Settings__c/fields/TagsAPI_URL__c.field-meta.xml
<CustomField>
    <fullName>TagsAPI_URL__c</fullName>
    <label>TagsAPI_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>