force-app/main/default/objects/MW_Settings__c/fields/thresholdApiAndStorage__c.field-meta.xml
<CustomField>
    <fullName>thresholdApiAndStorage__c</fullName>
    <label>thresholdApiAndStorage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>