force-app/main/default/objects/MW_Settings__c/fields/thresholdFundingCaps__c.field-meta.xml
<CustomField>
    <fullName>thresholdFundingCaps__c</fullName>
    <label>thresholdFundingCaps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>